--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@
 *.dylib
 
 # Executables
-*.exe
-*.out
+.exe
+.out
 *.app
 *.i*86
 *.x86_64
@@ -40,7 +40,7 @@
 *.dSYM/
 *.su
 *.idb
-*.pdb
+.pdb
 
 # Kernel Module Compile Results
 *.mod*
